--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,26 @@
-// Specific CSS for your home-page
+// SCSS for your homepage
+
+.home-container {
+  height: 100vh;
+  width: 100%;
+  background-color: white;
+
+}
+
+
+@media screen and (min-width: 1025px) {
+
+}
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+
+@media screen and (max-width: 480px) {
+
+}
