--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%# HTML correspondiente a home %>
+
+<div class="home-container">
+
+  <%= render "shared/navbar" %>
+
+  <%# <%= render 'shared/header' %>
+
+  <%# <%= render 'shared/main' %>
+
+  <%# <%= render 'shared/creations_card' %>
+
+  <%# <%= render 'shared/home_intro' %>
+
+  <%# <%= render 'shared/postal_cards' %>
+
+  <%# <%= render 'shared/business_cards' %>
+
+</div>
