--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
   <%= render "shared/navbar" %>
 
-  <%# <%= render 'shared/header' %>
+  <%= render 'shared/header' %>
 
   <%# <%= render 'shared/main' %>
 
