--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,12 +8,12 @@
 
   <%# <%= render 'shared/main' %>
 
-  <%# <%= render 'shared/creations_card' %>
+  <%= render 'shared/creations_card' %>
 
   <%# <%= render 'shared/home_intro' %>
 
   <%# <%= render 'shared/postal_cards' %>
 
-  <%# <%= render 'shared/business_cards' %>
+  <%= render 'shared/business_cards' %>
 
 </div>
