--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,13 +6,13 @@
 
   <%= render 'shared/header' %>
 
-  <%# <%= render 'shared/main' %>
+  <%= render 'shared/main' %>
 
   <%= render 'shared/creations_card' %>
 
-  <%# <%= render 'shared/home_intro' %>
+  <%= render 'shared/home_intro' %>
 
-  <%# <%= render 'shared/postal_cards' %>
+  <%= render 'shared/postal_cards' %>
 
   <%= render 'shared/business_cards' %>
 
