--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
 
   <%= render 'shared/main' %>
 
-  <%= render 'shared/creations_card' %>
+  <%= render 'shared/creations_cards' %>
 
   <%= render 'shared/home_intro' %>
 
