--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,11 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/presentacion";
+@import "pages/articles";
+
+
+// background-color: #9a5f45;
+// background-color: #f3d2c3;
+// text color: #e6b7a3;
+// text color: #e8997c;
