--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,8 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "header";
+@import "main";
+@import "creation_card";
+@import "postal_cards";
+@import "business_cards";
