--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,6 @@
 @import "navbar";
 @import "header";
 @import "main";
-@import "creation_card";
+@import "creations_card";
 @import "postal_cards";
 @import "business_cards";
