--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -1,5 +1,6 @@
 // SCSS correspondiente a presentacion
 
+// Presentacion dentro del home intro
 .home-intro-container {
 
   height: 300px;
@@ -172,3 +173,5 @@
 
   }
 }
+
+// Pagina de presentacion
