--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -4,4 +4,11 @@
   border: 1px solid black;
   background: white;
 
+  h2 {
+    color: #9a5f45;
+    font-size: 48px;
+    font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+    font-weight: 600;
+  }
+
 }
