--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -9,6 +9,8 @@
     font-size: 48px;
     font-family: "Dancing Script", serif; // Aplicando la nueva fuente
     font-weight: 600;
+    width: 100%;
+    border: 1px solid black;
   }
 
 }
