--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -10,6 +10,7 @@
     font-weight: 600;
     width: 100%;
     align-items: center;
+    justify-content: center;
     border: 1px solid black;
   }
 
