--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -3,13 +3,25 @@
 .login-container {
   background: white;
 
-  h2 {
-    color: #9a5f45;
-    font-size: 48px;
-    font-family: "Dancing Script", serif; // Aplicando la nueva fuente
-    font-weight: 600;
-    width: 100%;
-    border: 1px solid black;
+  .login-conexion-container {
+
+    .login-conexion-title {
+
+      h2 {
+        color: #9a5f45;
+        font-size: 48px;
+        font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+        font-weight: 600;
+        width: 100%;
+        border: 1px solid black;
+      }
+
+    }
+
   }
+
+
+
+
 
 }
