--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -8,6 +8,7 @@
     .login-conexion-title {
       border: 1px solid black;
       width: 100%;
+      display: flex;
       justify-content: center;
       align-items: center;
 
