--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -8,6 +8,7 @@
     .login-conexion {
       width: 50%;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       border: 1px solid black;
