--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -19,6 +19,10 @@
         font-family: "Dancing Script", serif; // Aplicando la nueva fuente
         font-weight: 600;
       }
+
+      .form-inputs {
+        border: 1px solid black;
+      }
     }
 
 
