--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -21,7 +21,7 @@
         font-weight: 600;
       }
 
-      .form-inputs {
+      .simple_form new_user {
         border: 1px solid black;
         width: 100%;
       }
