--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -4,7 +4,7 @@
   background: white;
 
   .login-conexion-container {
-    padding: 8px;
+    margin: 8px;
 
     .login-conexion {
       width: 50%;
