--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -13,7 +13,7 @@
       justify-content: center;
       align-items: center;
       padding: 8px;
-      border: 1px solid black;
+      border: 1px solid #9a5f45 ;
 
       h2 {
         color: #9a5f45;
