--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -13,6 +13,7 @@
       justify-content: center;
       align-items: center;
       padding: 8px;
+      background-color: #f3d2c3;
       border: 1px solid #9a5f45 ;
 
       h2 {
