--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -14,7 +14,7 @@
       align-items: center;
       padding: 8px;
       background-color: #f3d2c3;
-      border: 1px solid #9a5f45 ;
+      border: 1px solid #9a5f45;
 
       h2 {
         color: #9a5f45;
@@ -27,7 +27,7 @@
         width: 100%;
 
         input {
-          color: #f3d2c3;
+          color: #9a5f45;
         }
       }
     }
