--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -38,6 +38,7 @@
           border: 1px solid #9a5f45;
           border-radius: 4px;
           background-color: white;
+          border: 1px solid black;
 
           &:focus {
             outline: none;
