--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -55,6 +55,7 @@
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
+            border-radius: 4px;
 
             &:hover {
               background-color: #7e4a36;
