--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -47,11 +47,12 @@
         .form-actions {
           display: flex;
           justify-content: center;
+          margin: 0 0 16px 0;
 
           .btn-primary {
             background-color: #9a5f45;
             border-color: #9a5f45;
-            padding: 8px 16px 16px 16px;
+            padding: 8px 16px;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
