--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -3,7 +3,8 @@
 .login-container {
   background: white;
 
-  .login-conexion-container {
+  .sesion-conexion-container {
+    display: flex;
     padding: 8px;
 
     .login-conexion {
