--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -70,7 +70,66 @@
 
     }
 
+    .signup-conexion {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 8px;
+      background-color: #f3d2c3;
+      border: 1px solid #9a5f45;
 
+      h2 {
+      color: #9a5f45;
+      font-size: 48px;
+      font-family: "Dancing Script", serif;
+      font-weight: 600;
+      }
+
+      .form-horizontal {
+      width: 100%;
+      max-width: 400px;
+      margin: 0 auto;
+
+      .form-inputs {
+        margin-bottom: 16px;
+
+        .form-control {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 8px;
+        border: 1px solid #9a5f45;
+        border-radius: 4px;
+        }
+
+        .form-check-input {
+        margin-right: 8px;
+        }
+      }
+
+      .form-actions {
+        display: flex;
+        justify-content: center;
+        margin: 0 0 16px 0;
+
+        .btn-primary {
+        background-color: #9a5f45;
+        border-color: #9a5f45;
+        padding: 8px 16px;
+        font-size: 16px;
+        font-weight: 600;
+        cursor: pointer;
+        border-radius: 4px;
+
+        &:hover {
+          background-color: #7e4a36;
+          border-color: #7e4a36;
+        }
+        }
+      }
+      }
+    }
 
   }
 
