--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -90,11 +90,19 @@
       border: 1px solid #9a5f45;
       margin: 0 0 0 4px;
 
-      h2 {
-        color: #9a5f45;
-        font-size: 48px;
-        font-family: "Dancing Script", serif;
-        font-weight: 600;
+      .signup-conexion-title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        h2 {
+          color: #9a5f45;
+          font-size: 48px;
+          font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+          font-weight: 600;
+        }
+
       }
 
       .form-horizontal {
