--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -95,6 +95,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        border: 1px solid black;
 
         h2 {
           color: #9a5f45;
