--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -96,6 +96,7 @@
         align-items: center;
         width: 100%;
         border: 1px solid black;
+        top: 0;
 
         h2 {
           color: #9a5f45;
