--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -96,7 +96,7 @@
         align-items: center;
         width: 100%;
         border: 1px solid black;
-        margin-top: 8px;
+        margin-top: 0;
 
         h2 {
           color: #9a5f45;
