--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -9,6 +9,7 @@
 
     .login-conexion {
       width: 50%;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -81,6 +82,7 @@
 
     .signup-conexion {
       width: 50%;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
