--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -89,6 +89,7 @@
       background-color: #f3d2c3;
       border: 1px solid #9a5f45;
       margin: 0 0 0 4px;
+      border: 1px solid black;
 
       .signup-conexion-title {
         display: flex;
