--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -110,6 +110,22 @@
         max-width: 400px;
         margin: 0 auto;
         border: 1px solid black;
+
+        .form-inputs {
+          margin-bottom: 16px;
+
+          .form-control {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 8px;
+            border: 1px solid #9a5f45;
+            border-radius: 4px;
+          }
+
+          .form-check-input {
+            margin-right: 8px;
+          }
+        }
       }
 
 
