--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -131,7 +131,7 @@
           justify-content: center;
           margin: 0 0 16px 0;
 
-          button {
+          .btn {
             background-color: #9a5f45;
             border-color: #9a5f45;
             padding: 8px 16px;
