--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -134,6 +134,7 @@
           .btn {
             background-color: #9a5f45;
             border-color: #9a5f45;
+            color: white;
             padding: 8px 16px;
             font-size: 16px;
             font-weight: 600;
