--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "pages/index";
 @import "pages/presentation";
 @import "pages/articles";
+@import "pages/articles_index";
 
 
 // background-color: #9a5f45;
