--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<%# HTML correspondiente a articles index %>
+
 <h1><%= @article.name %></h1>
 
 <p><strong>Description :</strong> <%= @article.description %></p>
