--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Liste des Articles</h1>
 
+<%= render "shared/navbar" %>
+
 <%= link_to 'Nouvel Article', new_article_path, class: 'btn btn-primary' %>
 
 <table class="table">
