--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -1,5 +1,9 @@
 // SCSS correspondiente a articles_index
 
+.articles-index-container {
+  border: 1px solid black;
+
+}
 
 
 @media screen and (min-width: 1025px) {
