--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -3,6 +3,14 @@
 .articles-index-container {
   border: 1px solid black;
 
+  .articles-index-title {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+  }
+
+
+
 }
 
 
