--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -1,12 +1,14 @@
 // SCSS correspondiente a articles_index
 
 .articles-index-container {
+  background-color: white;
   border: 1px solid black;
 
   .articles-index-title {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
+
   }
 
 
