--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
 
 <header class="header">
   <div class="header-card-left">
-    <img src="https://res.cloudinary.com/dcfmvazgl/image/upload/v1739479360/Art%20et%20Matiere/Logo-removebg-preview_wuuxqj.png" alt="logo de l'art et la matiere">
+    <img src="https://res.cloudinary.com/dcfmvazgl/image/upload/v1742556817/new-logo_sqtb8o.jpg" alt="logo de l'art et la matiere">
   </div>
   <div class="header-card-right">
     <h1>L'art et la matiere</h1>
