--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -5,9 +5,10 @@
   border: 1px solid black;
 
   .articles-index-title {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
+    color: #9a5f45;
+    font-size: 48px;
+    font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+    font-weight: 600;
 
   }
 
