--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -3,6 +3,7 @@
 .articles-index-container {
   background-color: white;
   border: 1px solid black;
+  padding: 8px;
 
   .articles-index-title {
     color: #9a5f45;
