--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -11,6 +11,10 @@
     font-family: "Dancing Script", serif; // Aplicando la nueva fuente
     font-weight: 600;
 
+    .btn btn-primary {
+      border: 1px solid black;
+    }
+
   }
 
 
