--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -6,6 +6,7 @@
   padding: 8px;
 
   .articles-index-title {
+    display: flex;
     color: #9a5f45;
     font-size: 48px;
     font-family: "Dancing Script", serif; // Aplicando la nueva fuente
