--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -12,7 +12,7 @@
     font-family: "Dancing Script", serif; // Aplicando la nueva fuente
     font-weight: 600;
 
-    .btn btn-primary {
+    .btn {
       border: 1px solid black;
     }
 
