--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="articles-index-title">
     <h1>Liste des Articles</h1>
-      <%= link_to 'Nouvel Article', new_article_path, class: 'btn btn-primary' %>
+    <%= link_to 'Nouvel Article', new_article_path, class: ' ' %>
   </div>
 
 
