--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,6 +6,9 @@
   <%= render 'shared/header' %>
 
   <div class="articles-index-title">
+    <div class="articles-index-title-card-A">
+
+    </div>
     <h1>Liste des Articles</h1>
     <%= link_to 'Nouvel Article', new_article_path, class: ' ' %>
   </div>
