--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -7,10 +7,16 @@
 
   .articles-index-title {
     display: flex;
-    color: #9a5f45;
-    font-size: 48px;
-    font-family: "Dancing Script", serif; // Aplicando la nueva fuente
-    font-weight: 600;
+    .articles-index-title-card-A {
+      color: #9a5f45;
+      font-size: 48px;
+      font-family: "Dancing Script", serif; // Aplicando la nueva fuente
+      font-weight: 600;
+    }
+
+
+
+
 
 
 
