--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,10 +7,11 @@
 
   <div class="articles-index-title">
     <div class="articles-index-title-card-A">
-
+      <h1>Liste des Articles</h1>
     </div>
-    <h1>Liste des Articles</h1>
-    <%= link_to 'Nouvel Article', new_article_path, class: ' ' %>
+    <div class="articles-index-title-card-B">
+      <%= link_to 'Nouvel Article', new_article_path, class: ' ' %>
+    </div>
   </div>
 
 
