--- a/app/assets/stylesheets/pages/_articles_index.scss
+++ b/app/assets/stylesheets/pages/_articles_index.scss
@@ -8,6 +8,7 @@
   .articles-index-title {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .articles-index-title-card-A {
       color: #9a5f45;
