--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
       <h1>Liste des Articles</h1>
     </div>
     <div class="articles-index-title-card-B">
-      <%= link_to 'Nouvel Article', new_article_path, class: 'btn btn-primary ' %>
+      <%= link_to '+ Nouvel Article', new_article_path, class: 'btn btn-primary ' %>
     </div>
   </div>
 
