--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "pages/presentation";
 @import "pages/articles";
 @import "pages/articles_index";
+@import "pages/articles_new";
 
 
 // background-color: #9a5f45;
