--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- Para iOS (aunque obsoleto, sigue funcionando) -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Manifest para Android y navegadores modernos -->
+    <link rel="manifest" href="/manifest.json">
+
+
     <%# fontasome start %>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
