--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -48,7 +48,7 @@
 
       <div class="form-group">
         <%= form.label :category, "Catégorie" %>
-        <%= form.text_field :category, class: 'form-control' %>
+        <%= form.select :category, options_for_select(["Verre", "Carton", "Papier de soie", "Papier mache", "Fils"]), {}, class: 'form-control' %>
       </div>
 
       <div class="form-group">
