--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -38,7 +38,7 @@
             <td><%= article.name %></td>
             <td><%= article.description %></td>
             <td><%= article.price %></td>
-            <td><%= article.categorie %></td>
+            <td><%= article.category %></td>
             <td><%= article.stock %></td>
           </tr>
         <% end %>
