--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -39,15 +39,17 @@
             <td><%= article.description %></td>
             <td><%= article.price %></td>
             <td><%= article.category %></td>
-            <td><%= article.stock %></td>
+            <td>
+              <%= link_to 'Voir', article_path(article), class: 'btn btn-info' %>
+              <%= link_to 'Éditer', edit_article_path(article), class: 'btn btn-warning' %>
+            </td>
           </tr>
         <% end %>
       <% else %>
-        <p>Pas des articles disponibles.</p>
+        <p>No hay artículos disponibles.</p>
       <% end %>
 
-      <%= link_to 'Voir', article_path(article), class: 'btn btn-info' %>
-      <%= link_to 'Éditer', edit_article_path(article), class: 'btn btn-warning' %>
+
 
 
     </tbody>
