--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "pages/articles";
 @import "pages/articles_index";
 @import "pages/articles_new";
+@import "pages/articles_edit";
 
 
 // background-color: #9a5f45;
