--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "pages/articles_index";
 @import "pages/articles_new";
 @import "pages/articles_edit";
+@import "pages/articles_show";
 
 
 // background-color: #9a5f45;
