--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<%# HTML correspondiente a articles index %>
+<%# HTML correspondiente a articles show %>
 <%= render "shared/navbar" %>
 
 <h1><%= @article.name %></h1>
